tests/paczka1/small_fuzzy/86872155.err
Error in line 5: lYSQa8eR S738 63,1
Error in line 8: 98fBZE5JR S540 20,9
Error in line 13: ltetF S738 54,9
